--- a/news/templates/news/detail.html
+++ b/news/templates/news/detail.html
@@ -17,3 +17,9 @@
         </li>
     {% endfor %}
 </ul>
+
+<form action="{% url 'detail' new.id %}" method="post">
+    {% csrf_token %}
+    Content: <input type="text" name="content">
+    <input type="submit" value="Submit">
+</form>
