--- a/news/templates/news/create.html
+++ b/news/templates/news/create.html
@@ -1,6 +1,17 @@
-<form action="{% url 'create_new' %}" method="post">
-    {% csrf_token %}
-    Title: <input type="text" name="title"> <br>
-    Content: <input type="text" name="content"> <br>
-    <input type="submit" value="submit">
-</form>
+{% extends 'news/base.html' %}
+{% block 'title' %}
+    Create news
+{% endblock %}
+
+{% block 'content' %}
+    <form action="{% url 'create_new' %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="submit">
+    </form>
+    <a href="{% url 'news' %}">All news</a>
+{% endblock %}
+
+
+
+
